Better error handling foundation (#27)
* wip middleware

* a working middleware example

* error handling when running the app works

* e2e middleware working for find-league-by-id

* middleware error handling for create-season

* middleware error handling for find-season-by-id

* middleware error handling for find-season-by-league-id-and-year

* fixing up integration tests

* create owner error handling middleware
